# fcitx5-rime

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  org.fcitx.Fcitx5.Addon.Rime.metainfo.xml.in  org.fcitx.fcitx5-rime.metainfo.xml.in
.github/workflows/: check.yml
data/: CMakeLists.txt  fcitx5.yaml
gui/: CMakeLists.txt  ConfigMain.cpp  ConfigMain.h  ConfigMain.ui  Main.cpp  Main.h  Model.cpp  Model.h  RimeConfigParser.cpp  RimeConfigParser.h  keylistwidget.cpp  keylistwidget.h  rime-config.json
po/: LINGUAS  ca.po  da.po  de.po  fcitx5-rime.pot  fr.po  he.po  ja.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  rime-addon.conf.in  rime-addon.conf.in.in  rime.conf.in  rimeaction.cpp  rimeaction.h  rimecandidate.cpp  rimecandidate.h  rimeengine.cpp  rimeengine.h  rimefactory.cpp  rimefactory.h  rimeservice.cpp  rimeservice.h  rimesession.cpp  rimesession.h  rimestate.cpp  rimestate.h
